# PurpleEgg

./: Makefile.am  README.md  configure.ac  flatpak.sh  org.gnome.PurpleEgg.json  setuptools-configure
cli/: .gitignore  Makefile.am  docker-launch.c  host-command.c  host-command.h  pegg.in  run-host.c
common/: Makefile.am  host-command.c  host-command.h
data/: Makefile.am  org.gnome.PurpleEgg.desktop  org.gnome.PurpleEgg.search-provider.ini  org.gnome.PurpleEgg.service  org.gnome.PurpleEgg.service.in  org.gnome.newterm.desktop  org.gnome.newterm.search-provider.ini  org.gnome.newterm.service
po/: Makevars
src/: Makefile.am  introspection.c  introspection.h  main.c  project-application.c  project-application.h  project-creator.c  project-creator.h  project-creator.ui  project-greeter.c  project-greeter.h  project-greeter.ui  project-tab.c  project-tab.h  project-view.c  project-view.h  project-view.ui  project-window.c  project-window.h  project-window.ui  project.gresource.xml
