-include $(top_srcdir)/git.mk

EXTRA_DIST=

desktopdir=$(datadir)/applications
desktop_DATA = org.gnome.newterm.desktop
EXTRA_DIST += desktop_DATA

searchdir=$(datadir)/gnome-shell/search-providers

search_DATA = org.gnome.newterm.search-provider.ini
EXTRA_DIST += searchdir_DATA

servicedir=/usr/share/dbus-1/services
service_DATA = org.gnome.newterm.service
